--- a/experiments/slayware/index.html
+++ b/experiments/slayware/index.html
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="sidebar-section territory-info">
-                    <h2 id="player-indicator" class="player-1">Player 1's Turn</h2>
+                    <h3>Territory Info</h3>
                     <div class="stats-grid">
                         <div class="stat-item">
                             <span class="label">Land</span>
@@ -151,10 +151,23 @@
                             <i class="fas fa-user"></i>
                             <span>10c</span>
                         </button>
+                        <button class="shop-item" data-unit="spearman" title="Spearman (20c)">
+                            <i class="fas fa-bullseye"></i>
+                            <span>20c</span>
+                        </button>
+                        <button class="shop-item" data-unit="knight" title="Knight (30c)">
+                            <i class="fas fa-chess-knight"></i>
+                            <span>30c</span>
+                        </button>
+                        <button class="shop-item" data-unit="baron" title="Baron (40c)">
+                            <i class="fas fa-chess-king"></i>
+                            <span>40c</span>
+                        </button>
                         <button class="shop-item" data-unit="castle" title="Castle (15c)">
                             <i class="fas fa-fort-awesome"></i>
                             <span>15c</span>
                         </button>
+
                     </div>
                 </div>
 
@@ -167,6 +180,17 @@
             </aside>
         </main>
     </div>
+    <div id="game-over-modal" class="modal glass hidden">
+        <div class="modal-content text-center">
+            <h2 id="winner-announce" class="winner-title">Winner!</h2>
+            <div id="game-over-stats" class="stats-grid"></div>
+            <button id="restart-btn" class="primary-btn wide">Play Again</button>
+        </div>
+    </div>
+
+    <!-- Ghost Cursor Element -->
+    <div id="cursor-follower"></div>
+
     <script src="script.js"></script>
 </body>
 
