Conquest Experiments: first textures added

--- a/experiments/slayware/index.html
+++ b/experiments/slayware/index.html
@@ -83,6 +83,8 @@
                 <button id="quit-btn" class="secondary-btn" title="Quit to Menu"><i class="fas fa-sign-out-alt"></i>
                     Quit</button>
                 <button id="help-btn" class="secondary-btn"><i class="fas fa-question-circle"></i> Help</button>
+                <button id="recenter-btn" class="secondary-btn" title="Recenter Map"><i
+                        class="fas fa-crosshairs"></i></button>
                 <button id="end-turn-btn" class="primary-btn">End Turn <i class="fas fa-forward"></i></button>
             </div>
         </header>
