Conquest Experiment: more textures

--- a/experiments/slayware/index.html
+++ b/experiments/slayware/index.html
@@ -124,7 +124,9 @@
                         <li><strong>Wages:</strong> Peasant(2), Spearman(6), Knight(18), Baron(54).</li>
                         <li><strong>Bankruptcy:</strong> If wages exceed money at turn start, all units die and become
                             trees!</li>
-                        <li><strong>Costs:</strong> New Peasants cost 10c, Castles cost 15c.</li>
+                        <li><strong>Costs:</strong> New Peasants cost 10<img src="assets/coin.png" class="coin-icon"
+                                style="width:14px;height:14px;">, Castles cost 15<img src="assets/coin.png"
+                                class="coin-icon" style="width:14px;height:14px;">.</li>
                     </ul>
 
                     <h3>Merging</h3>
@@ -178,25 +180,25 @@
                 <div class="sidebar-section shop" id="shop-container">
                     <h3>Unit Shop</h3>
                     <div class="shop-grid">
-                        <button class="shop-item" data-unit="peasant" title="Peasant (10c)">
-                            <i class="fas fa-user"></i>
-                            <span>10c</span>
+                        <button class="shop-item" data-unit="peasant" title="Peasant (10 coins)">
+                            <img src="assets/shop_peasant.png" class="shop-unit-icon" alt="Peasant">
+                            <span>10<img src="assets/coin.png" class="coin-icon" alt="c"></span>
                         </button>
-                        <button class="shop-item" data-unit="spearman" title="Spearman (20c)">
-                            <i class="fas fa-bullseye"></i>
-                            <span>20c</span>
+                        <button class="shop-item" data-unit="spearman" title="Spearman (20 coins)">
+                            <img src="assets/shop_spearman.png" class="shop-unit-icon" alt="Spearman">
+                            <span>20<img src="assets/coin.png" class="coin-icon" alt="c"></span>
                         </button>
-                        <button class="shop-item" data-unit="knight" title="Knight (30c)">
-                            <i class="fas fa-chess-knight"></i>
-                            <span>30c</span>
+                        <button class="shop-item" data-unit="knight" title="Knight (30 coins)">
+                            <img src="assets/shop_knight.png" class="shop-unit-icon" alt="Knight">
+                            <span>30<img src="assets/coin.png" class="coin-icon" alt="c"></span>
                         </button>
-                        <button class="shop-item" data-unit="baron" title="Baron (40c)">
-                            <i class="fas fa-chess-king"></i>
-                            <span>40c</span>
+                        <button class="shop-item" data-unit="baron" title="Baron (40 coins)">
+                            <img src="assets/shop_baron.png" class="shop-unit-icon" alt="Baron">
+                            <span>40<img src="assets/coin.png" class="coin-icon" alt="c"></span>
                         </button>
-                        <button class="shop-item" data-unit="castle" title="Castle (15c)">
-                            <i class="fas fa-fort-awesome"></i>
-                            <span>15c</span>
+                        <button class="shop-item" data-unit="castle" title="Castle (15 coins)">
+                            <img src="assets/shop_castle.png" class="shop-unit-icon" alt="Castle">
+                            <span>15<img src="assets/coin.png" class="coin-icon" alt="c"></span>
                         </button>
 
                     </div>
