Conquest Experiment: more maps

--- a/experiments/slayware/index.html
+++ b/experiments/slayware/index.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div id="map-size-group" class="form-group">
-                    <label>Map Size <span id="map-size-display" style="float: right; color: var(--color-accent);">100
+                    <label>Map Size <span id="map-size-display" style="float: right; color: var(--color-muted);">100
                             Hexes</span></label>
                     <input type="range" id="map-size-slider" min="50" max="500" value="100" step="10"
                         style="width: 100%; accent-color: var(--color-accent);">
@@ -231,8 +231,12 @@
     <div id="shop-tooltip" class="shop-tooltip hidden"></div>
 
     <script src="maps/earth.js"></script>
-    <script src="maps/earth_sm.js"></script>
-    <script src="maps/westeros.js"></script>
+    <script src="maps/cuba.js"></script>
+    <script src="maps/hispaniola.js"></script>
+    <script src="maps/japan.js"></script>
+    <script src="maps/great_britain.js"></script>
+    <script src="maps/corsica.js"></script>
+    <script src="maps/guadeloupe.js"></script>
     <script src="script.js"></script>
 </body>
 
